[package]
name = "nro_hook"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git", features = ["nro_internal"] }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
parking_lot = { version = "0.10", features = ["nightly"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
